[gd_scene load_steps=9 format=3 uid="uid://bkkfu678a08ls"]

[ext_resource type="Script" path="res://script/puzzle_player.gd" id="1"]
[ext_resource type="Script" path="res://script/puzzle_additive_layer_renderer.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bgs0q54l6tbm0" path="res://img/right_arrow.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ca47y20hngu54" path="res://img/left_arrow.png" id="5"]
[ext_resource type="Texture2D" uid="uid://8mamdlw062gp" path="res://img/cross.png" id="6"]
[ext_resource type="Script" path="res://script/viewport_init.gd" id="7"]
[ext_resource type="Script" path="res://script/puzzle_foreground_renderer.gd" id="8"]

[sub_resource type="CanvasItemMaterial" id="2"]
blend_mode = 1

[node name="PuzzleUI" type="Node2D"]
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer"]
custom_minimum_size = Vector2(800, 2.08165e-12)
layout_mode = 2

[node name="LeftArrowButton" type="TextureButton" parent="PanelContainer/CenterContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("5")

[node name="PuzzleRegion" type="ColorRect" parent="PanelContainer/CenterContainer/MarginContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0)

[node name="PuzzleForeground" type="TextureRect" parent="PanelContainer/CenterContainer/MarginContainer/PuzzleRegion"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 500.0
expand_mode = 1

[node name="SubViewport" type="SubViewport" parent="PanelContainer/CenterContainer/MarginContainer/PuzzleRegion/PuzzleForeground"]
transparent_bg = true
size = Vector2i(1440, 1200)
script = ExtResource("7")

[node name="MixLayer" type="Control" parent="PanelContainer/CenterContainer/MarginContainer/PuzzleRegion/PuzzleForeground/SubViewport"]
custom_minimum_size = Vector2(1440, 1200)
layout_mode = 3
anchors_preset = 0
offset_right = 1440.0
offset_bottom = 1200.0
script = ExtResource("8")

[node name="AddLayer" type="Control" parent="PanelContainer/CenterContainer/MarginContainer/PuzzleRegion/PuzzleForeground/SubViewport"]
material = SubResource("2")
custom_minimum_size = Vector2(1440, 1200)
layout_mode = 3
anchors_preset = 0
offset_right = 1440.0
offset_bottom = 1200.0
script = ExtResource("2")

[node name="RightArrowButton" type="TextureButton" parent="PanelContainer/CenterContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("4")

[node name="BackButton" type="TextureButton" parent="."]
offset_left = 64.0
offset_right = 192.0
offset_bottom = 128.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("6")

[connection signal="mouse_entered" from="PanelContainer/CenterContainer/MarginContainer/LeftArrowButton" to="." method="_on_left_arrow_button_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/CenterContainer/MarginContainer/LeftArrowButton" to="." method="_on_left_arrow_button_mouse_exited"]
[connection signal="pressed" from="PanelContainer/CenterContainer/MarginContainer/LeftArrowButton" to="." method="_on_left_arrow_button_pressed"]
[connection signal="mouse_entered" from="PanelContainer/CenterContainer/MarginContainer/RightArrowButton" to="." method="_on_right_arrow_button_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/CenterContainer/MarginContainer/RightArrowButton" to="." method="_on_right_arrow_button_mouse_exited"]
[connection signal="pressed" from="PanelContainer/CenterContainer/MarginContainer/RightArrowButton" to="." method="_on_right_arrow_button_pressed"]
[connection signal="mouse_entered" from="BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="mouse_exited" from="BackButton" to="." method="_on_back_button_mouse_exited"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
